[project]
name = "human-expertise-in-algorithmic-prediction"
version = "0.1.0"
description = "An exploration of the framework discussed in the paper Human Expertise in Algorithmic Prediction: https://arxiv.org/abs/2402.00793"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
]
