[project]
name = "human-expertise-in-algorithmic-prediction"
version = "0.1.0"
description = "An exploration of the framework discussed in the paper Human Expertise in Algorithmic Prediction: https://arxiv.org/abs/2402.00793"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ipdb>=0.13.13",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "scikit-learn-extra>=0.3.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "timm>=1.0.12",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "cupy-cuda11x>=13.3.0",
]
